; ModuleID = '/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xml_to_soap.c_gen_soap_fault.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xml_to_soap.c_gen_soap_fault.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TOKEN_FAULT = common dso_local global i32 0, align 4
@xmlrpc_vector_struct = common dso_local global i32 0, align 4
@TOKEN_SOAP_FAULTCODE = common dso_local global i32 0, align 4
@TOKEN_SOAP_FAULTSTRING = common dso_local global i32 0, align 4
@TOKEN_SOAP_FAULTACTOR = common dso_local global i32 0, align 4
@TOKEN_SOAP_FAULTDETAILS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*, i8*)* @gen_soap_fault to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gen_soap_fault(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i32, i32* @TOKEN_FAULT, align 4
  %11 = load i32, i32* @xmlrpc_vector_struct, align 4
  %12 = call i32 @XMLRPC_CreateVector(i32 %10, i32 %11)
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* %9, align 4
  %14 = load i32, i32* @TOKEN_SOAP_FAULTCODE, align 4
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @XMLRPC_CreateValueString(i32 %14, i8* %15, i32 0)
  %17 = load i32, i32* @TOKEN_SOAP_FAULTSTRING, align 4
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @XMLRPC_CreateValueString(i32 %17, i8* %18, i32 0)
  %20 = load i32, i32* @TOKEN_SOAP_FAULTACTOR, align 4
  %21 = load i8*, i8** %7, align 8
  %22 = call i32 @XMLRPC_CreateValueString(i32 %20, i8* %21, i32 0)
  %23 = load i32, i32* @TOKEN_SOAP_FAULTDETAILS, align 4
  %24 = load i8*, i8** %8, align 8
  %25 = call i32 @XMLRPC_CreateValueString(i32 %23, i8* %24, i32 0)
  %26 = call i32 @XMLRPC_AddValuesToVector(i32 %13, i32 %16, i32 %19, i32 %22, i32 %25, i32* null)
  %27 = load i32, i32* %9, align 4
  ret i32 %27
}

declare dso_local i32 @XMLRPC_CreateVector(i32, i32) #1

declare dso_local i32 @XMLRPC_AddValuesToVector(i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @XMLRPC_CreateValueString(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
